tests/parser-test-files/bad-files/parse-when.1.error
error: Malformed when expression
  --> test:4:15
   |
 4 |  (define f (when))
   |                 ^ expected a predicate
